auto-test/tests/chapter_18/invalid_types/invalid_struct_declaration/duplicate_member_name.c
struct s {
  
  int x;
  double x;
};